# markov_prediction-model

./: README.md
markov_risk_strategy/: MODEL.md  README.md  app.py  pyproject.toml
markov_risk_strategy/examples/: demo_portfolio.json  demo_portfolio.py
markov_risk_strategy/reports/: cli_report.json  cli_report.md  demo_metrics.json  demo_report.md  full_report.json  full_report.md
markov_risk_strategy/reports/diag_h1/: demo_metrics.json
markov_risk_strategy/reports/test_h1/: demo_report.md
markov_risk_strategy/reports/test_h10/: demo_metrics.json  demo_report.md
markov_risk_strategy/reports/test_p_100/: demo_metrics.json  demo_report.md
markov_risk_strategy/reports/test_p_1000/: demo_report.md
markov_risk_strategy/reports/test_p_50000/: demo_metrics.json  demo_report.md
markov_risk_strategy/reports/test_s_1/: demo_metrics.json  demo_report.md
markov_risk_strategy/reports/test_s_42/: demo_metrics.json
markov_risk_strategy/reports/test_s_999/: demo_metrics.json  demo_report.md
markov_risk_strategy/src/markov_risk/: __init__.py  __main__.py  chain.py  cli.py  metrics.py  reporting.py  states.py  transition.py
markov_risk_strategy/src/markov_risk/llm/: __init__.py  client.py  narrator.py  prompts.py
markov_risk_strategy/src/markov_risk_strategy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
markov_risk_strategy/tests/: conftest.py  test_chain.py  test_metrics.py  test_narrator.py  test_transition.py
markov_risk_strategy/tests/fixtures/: sample_matrix.json
