[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markov-risk-strategy"
version = "0.1.0"
description = "Credit-risk Markov chain simulator with an LLM narrator for risk reports."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.5",
    "anthropic>=0.39",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[project.scripts]
markov-risk = "markov_risk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
